--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@ngxs/store": "^3.7.3",
     "angular-in-memory-web-api": "^0.13.0",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
