--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "angular-in-memory-web-api": "^0.13.0",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "ngx-pagination": "^5.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
